# API_reqres

./: .env  .env_examples  .gitignore  README.md  pyproject.toml  requirements.txt  test_reqres.py
models/: helpers.py
shemas/: reqres.py
tests/: test_reqres.py
