[tool.poetry]
name = "api tests reqres"
version = "0.1.0"
description = "Autotests for API reqres.in"
authors = ["Pavel Surov <surovp08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
requests = "^2.28.1 "
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"
allure-pytest = "^2.10.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
